--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		<link rel="stylesheet" type="text/css" href="css/fontawesome.all.min.css">
 		<link rel="stylesheet" type="text/css" href="css/pe-icon-7-stroke.css">
 		<link rel="stylesheet" type="text/css" href="css/helper.css">
+
 		<!-- 动画 -->
 		<link rel="stylesheet" type="text/css" href="css/animate.css">
 		<!--弹出框插件 -->
@@ -68,12 +69,12 @@
 									关于我们
 								</a>
 								<div class="dropdown-menu" aria-labelledby="aboutUs">
-									<a class="dropdown-item" href="aboutUs.html">公司概况</a>
-									<a class="dropdown-item" href="aboutUs.html">管理团队</a>
-									<a class="dropdown-item" href="aboutUs.html">分支机构</a>
-									<a class="dropdown-item" href="aboutUs.html">发展历程</a>
-									<a class="dropdown-item" href="aboutUs.html">荣誉资质</a>
-									<a class="dropdown-item" href="aboutUs.html">华文之歌</a>
+									<a class="dropdown-item" href="aboutUs.html?id=1">公司概况</a>
+									<a class="dropdown-item" href="aboutUs.html?id=2">管理团队</a>
+									<a class="dropdown-item" href="aboutUs.html?id=3">分支机构</a>
+									<a class="dropdown-item" href="aboutUs.html?id=4">发展历程</a>
+									<a class="dropdown-item" href="aboutUs.html?id=5">荣誉资质</a>
+									<a class="dropdown-item" href="aboutUs.html?id=6">华文之歌</a>
 								</div>
 							</li>
 							<li class="nav-item dropdown">
@@ -424,7 +425,7 @@
 						<div class="row justify-content-center">
 							<div class="col-lg-4 col-md-4">
 								<a href="javascript:0;" class="tab-content-items">
-									<img src="./img/news-img1.png" alt="" class="tab-content-img">
+									<img src="./img/news/icon-zwf.png" alt="" class="tab-content-img">
 									<p class="p-time">2022-5-13</p>
 									<p class="newsDynamic-items-title">青春是一种精神，不止于年龄</p>
 									<div class="newsDynamic-items-text">再过三天，就将迎来第73个五四青年节。联合国世界卫生组织确定的年龄分段：14
@@ -437,7 +438,7 @@
 							</div>
 							<div class="col-lg-4 col-md-4">
 								<a href="javascript:0;" class="tab-content-items">
-									<img src="./img/news-img2.png" alt="" class="tab-content-img">
+									<img src="./img/news/icon-zwf.png" alt="" class="tab-content-img">
 									<p class="p-time">2022-5-13</p>
 									<p class="newsDynamic-items-title">青春是一种精神，不止于年龄</p>
 									<div class="newsDynamic-items-text">再过三天，就将迎来第73个五四青年节。联合国世界卫生组织确定的年龄分段：14
@@ -450,7 +451,7 @@
 							</div>
 							<div class="col-lg-4 col-md-4">
 								<a href="javascript:0;" class="tab-content-items">
-									<img src="./img/news-img3.png" alt="" class="tab-content-img">
+									<img src="./img/news/icon-zwf.png" alt="" class="tab-content-img">
 									<p class="p-time">2022-5-13</p>
 									<p class="newsDynamic-items-title">青春是一种精神，不止于年龄</p>
 									<div class="newsDynamic-items-text">再过三天，就将迎来第73个五四青年节。联合国世界卫生组织确定的年龄分段：14
@@ -664,6 +665,21 @@
 			</div>
 		</footer>
 		<!--  footer 结束 -->
+
+		<!-- 在线咨询 开始-->
+		<div class="service-box">
+			<div class="service-l" id="service-l">
+				<img src="./img/favicon.png" alt="" />
+				<span>您有新的消息</span>
+			</div>
+			<div class="service-r" id="service-r">
+				<img src="./img/favicon.png" alt="" />
+				<span>在线咨询</span>
+			</div>
+			<!-- 聊天框 -->
+			<div class="chatBox">1</div>
+		</div>
+		<!-- 在线咨询 结束-->
 
 		<!--返回顶部 开始-->
 		<!-- <div class="totop">
