--- a/newsDetails.html
+++ b/newsDetails.html
@@ -204,22 +204,22 @@
             <div class="col-xl-9">
               <div class="row page-btn-box">
                 <div class="col-xl-6">
-                  <button class="page-btn">
+                  <a href="" class="page-btn">
                     <div class="page-btn-l">上一篇</div>
                     <div class="page-btn-r">
                       <p class="btn-p-1">喜报‖河北国兴税务2021年度经营收入居全国百强所第67名67名67名</p>
                       <p class="btn-p-time">时间：2022-07-01</p>
                     </div>
-                  </button>
+                  </a>
                 </div>
                 <div class="col-xl-6">
-                  <button class="page-btn">
+                  <a href="" class="page-btn">
                     <div class="page-btn-l">下一篇</div>
                     <div class="page-btn-r">
                       <p class="btn-p-1">华文财税联合党支部七月主题党会‖不忘初心使命，厚使命，厚</p>
                       <p class="btn-p-time">时间：2022-07-01</p>
                     </div>
-                  </button>
+                  </a>
                 </div>
                 <img src="./img/icon-ewm.png" alt="" class="ewmimg-img" />
               </div>
