--- a/newsTea.html
+++ b/newsTea.html
@@ -120,9 +120,9 @@
 			<div class="container-fluid">
 				<!-- 导航按钮 开始 -->
 				<div class="row news-info-navbox">
-					<a href="news.html" class="news-navbox-items active">华文动态</a>
-					<a href="newsTea.html" class="news-navbox-items">华文下午茶</a>
-					<a href="newsInterpret.html" class="news-navbox-items">专业解读</a>
+					<a href="news.html" class="news-navbox-items">华文动态</a>
+					<a href="newsTea.html;" class="news-navbox-items active">华文下午茶</a>
+					<a href="javascript:0;" class="news-navbox-items">专业解读</a>
 				</div>
 				<!-- 导航按钮 结束 -->
 
