--- a/regulations.html
+++ b/regulations.html
@@ -21,6 +21,8 @@
 		<link rel="stylesheet" type="text/css" href="css/fontawesome.all.min.css">
 		<link rel="stylesheet" type="text/css" href="css/pe-icon-7-stroke.css">
 		<link rel="stylesheet" type="text/css" href="css/helper.css">
+		<link rel="stylesheet" type="text/css" href="css/iconfont.css">
+
 		<!-- 动画 -->
 		<link rel="stylesheet" type="text/css" href="css/animate.css">
 		<!--弹出框插件 -->
@@ -124,7 +126,7 @@
 						<!-- 左侧导航树 开始 -->
 						<div class="left-tree-b">
 							<div class="sidebar-btn">
-								<img src="./img/icon-treebtn.png" alt="" />
+								<img src="./img/icon-treebtn.png" alt="" id="sidebar-btn-i"/>
 							</div>
 							<div class="form-box">
 								<form action="" method="post">
@@ -139,32 +141,217 @@
 									<div id="sidebar-menu" class="sidebar-menu">
 										<ul>
 											<li class="menu-title"> 
-												<span>
-													<img src="./img/icon-ss.png" alt="" />税收政策法规
-												</span>
-											</li>
-											<li class="submenu">
 												<a href="javascript:void(0);">
-													<span>Multi Level</span>
-													<i class="pe-7s-E6 arrow"></i>
+													<i class="iconfont icon-jinqian-"></i>
+													<span>税收政策法规</span>
 												</a>
-												<ul style="display: none;">
+												<ul>
 													<li class="submenu">
-														<a href="javascript:void(0);"> <span>Level 1</span> <span class="menu-arrow"></span></a>
-														<ul style="display: none;">
-															<li><a href="javascript:void(0);"><span>Level 2</span></a></li>
-															<li class="submenu">
-																<a href="javascript:void(0);"> <span> Level 2</span> <span class="menu-arrow"></span></a>
-																<ul style="display: none;">
-																	<li><a href="javascript:void(0);">Level 3</a></li>
-																	<li><a href="javascript:void(0);">Level 3</a></li>
-																</ul>
+														<a href="javascript:void(0);">
+															<i class="iconfont icon-fenjifenlei"></i>
+															<span>税种分类</span>
+															<i class="pe-7s-E6 arrow"></i>
+														</a>
+														<ul>
+															<li>
+																<a href="javascript:void(0);" class="active"> <span>增值税</span></a>
 															</li>
-															<li><a href="javascript:void(0);"> <span>Level 2</span></a></li>
+															<li>
+																<a href="javascript:void(0);"> <span>消费税</span></a>
+															</li>
+															<li>
+																<a href="javascript:void(0);"> <span>营业税</span></a>
+															</li>
+															<li>
+																<a href="javascript:void(0);"> <span>个人所得税</span></a>
+															</li>
+															<li>
+																<a href="javascript:void(0);"> <span>资源税</span></a>
+															</li>
+															<li>
+																<a href="javascript:void(0);"> <span>环境保护税</span></a>
+															</li>
+															<li>
+																<a href="javascript:void(0);"> <span>房产税</span></a>
+															</li>
+															<li>
+																<a href="javascript:void(0);"> <span>房地产税</span></a>
+															</li>
+															<li>
+																<a href="javascript:void(0);"> <span>城市土地使用税</span></a>
+															</li>
+															<li>
+																<a href="javascript:void(0);"> <span>土地增值税</span></a>
+															</li>
+															<li>
+																<a href="javascript:void(0);"> <span>车船税</span></a>
+															</li>
+															<li>
+																<a href="javascript:void(0);"> <span>车辆购置税</span></a>
+															</li>
+															<li>
+																<a href="javascript:void(0);"> <span>烟叶税</span></a>
+															</li>
+															<li>
+																<a href="javascript:void(0);"> <span>耕地占用税</span></a>
+															</li>
+															<li>
+																<a href="javascript:void(0);"> <span>契税</span></a>
+															</li>
+															<li>
+																<a href="javascript:void(0);"> <span>船舶吨税</span></a>
+															</li>
+															<li>
+																<a href="javascript:void(0);"> <span>进出口税收</span></a>
+															</li>
+															<li>
+																<a href="javascript:void(0);"> <span>有关规费</span></a>
+															</li>
+															<li>
+																<a href="javascript:void(0);"> <span>其他</span></a>
+															</li>
 														</ul>
 													</li>
-													<li>
-														<a href="javascript:void(0);"> <span>Level 1</span></a>
+													<li class="submenu">
+														<a href="javascript:void(0);">
+															<i class="iconfont icon-airudiantubiaohuizhi-zhuanqu_aidushu"></i>
+															<span>税收征管</span>
+															<i class="pe-7s-E6 arrow"></i>
+														</a>
+														<ul>
+															<li><a target="_blank" href="/list_44"><span>税务稽查</span></a></li>
+															<li><a target="_blank" href="/list_65"><span>税收征管</span> </a></li>
+															<li><a target="_blank" href="/list_102"><span>纳税申报</span></a></li>
+															<li><a target="_blank" href="/list_103"><span>税收优惠</span></a></li>   
+															<li><a target="_blank" href="/list_104"><span>纳税评估</span></a></li>
+														</ul>
+													</li>
+													<li class="submenu">
+														<a href="javascript:void(0);">
+															<i class="iconfont icon-zhengcejiedu"></i>
+															<span>解读及访谈</span>
+															<i class="pe-7s-E6 arrow"></i>
+														</a> 
+														<ul>             
+															<li><a target="_blank" href="/list_106"><span>减税降费政策操作指南</span></a></li>
+														</ul>
+													</li>
+
+												</ul>
+											</li>
+											<li class="menu-title"> 
+												<a href="javascript:void(0);">
+													<i class="iconfont icon-xinhao-signal-fill"></i>
+													<span>审计政策法规</span>
+												</a>
+												<ul>
+													<li class="submenu">
+														<a href="javascript:void(0);">
+															<i class="pe-7s-jsj"></i>
+															<span>其他内容</span>
+														</a>
+													</li>
+
+												</ul>
+											</li>
+											<li class="menu-title"> 
+												<a href="javascript:void(0);">
+													<i class="iconfont icon-zaojiagongchengshi"></i>
+													<span>造价政策法规</span>
+												</a>
+												<ul>
+													<li class="submenu">
+														<a href="javascript:void(0);">
+															<i class="pe-7s-jsj"></i>
+															<span>其他内容</span>
+														</a>
+													</li>
+
+												</ul>
+											</li>
+											<li class="menu-title"> 
+												<a href="javascript:void(0);">
+													<i class="iconfont icon-gongshangdengji"></i>
+													<span>工商法规</span>
+												</a>
+												<ul>
+													<li class="submenu">
+														<a href="/list_125">
+															<i class="iconfont icon-gongshangdengji"></i>
+															<span>工商法规</span>
+														</a>
+													</li>
+												</ul>
+											</li>
+											<li class="menu-title"> 
+												<a href="javascript:void(0);">
+													<i class="iconfont icon-shixindiqiu"></i>
+													<span>地域范围</span>
+												</a>
+												<ul>
+													<li class="submenu">
+														<a  href="javascript:0;">
+															<i class="pe-7s-jsj"></i>
+															<span>北京市</span>
+															<i class="pe-7s-E6 arrow"></i>
+														</a>
+														<ul>             
+															<li><a target="_blank" href="/list_26"><span>直辖市法规</span></a></li>
+														</ul>
+													</li>
+													<li class="submenu">
+														<a href="javascript:0;">
+															<i class="pe-7s-jsj"></i>
+															<span>内蒙古自治区</span>
+															<i class="pe-7s-E6 arrow"></i>
+														</a>
+														<ul>             
+															<li><a target="_blank" href="/list_27"><span>自治区法规</span></a></li>
+															<li><a target="_blank" href="/list_124"><span>呼和浩特市</span></a></li>
+														</ul>
+													</li>
+													<li class="submenu">
+														<a href="javascript:0;">
+															<i class="pe-7s-jsj"></i>
+															<span>河北省</span>
+															<i class="pe-7s-E6 arrow"></i>
+														</a>
+														<ul>             
+															<li><a target="_blank" href="/list_31"><span>省级法规</span></a></li>
+															<li><a target="_blank" href="/list_32"><span>石家庄市</span></a></li>
+															<li><a target="_blank" href="/list_33"><span>秦皇岛市</span></a></li>
+															<li><a target="_blank" href="/list_34"><span>唐山市</span></a></li>
+															<li><a target="_blank" href="/list_35"><span>邯郸市</span></a></li>
+															<li><a target="_blank" href="/list_36"><span>邢台市</span></a></li>
+															<li><a target="_blank" href="/list_37"><span>保定市</span></a></li>
+															<li><a target="_blank" href="/list_38"><span>张家口市</span></a></li>
+															<li><a target="_blank" href="/list_39"><span>承德市</span></a></li>
+															<li><a target="_blank" href="/list_40"><span>廊坊市</span></a></li>
+															<li><a target="_blank" href="/list_41"><span>沧州市</span></a></li>
+															<li><a target="_blank" href="/list_42"><span>衡水市</span></a></li>
+														</ul>
+													</li>
+													<li class="submenu">
+														<a href="javascript:0;">
+															<i class="pe-7s-jsj"></i>
+															<span>山东省</span>
+															<i class="pe-7s-E6 arrow"></i>
+														</a>
+														<ul>             
+															<li><a target="_blank" href="/list_66"><span>省级法规</span></a></li>
+														</ul>
+													</li>
+													<li class="submenu">
+														<a href="javascript:0;">
+															<i class="pe-7s-jsj"></i>
+															<span>河南省</span>
+															<i class="pe-7s-E6 arrow"></i>
+														</a>
+														<ul>             
+															<li><a target="_blank" href="/list_83"><span>省级法规</span></a></li>
+															<li><a target="_blank" href="/list_84"><span>郑州市</span></a></li>
+															<li><a target="_blank" href="/list_90"><span>新乡市</span></a></li>
+														</ul>
 													</li>
 												</ul>
 											</li>
@@ -289,18 +476,31 @@
 										</tr>
 									</tbody>
 								</table>
-
+								<!-- 分页 -->
+								<div class="page01">
+									<nav aria-label="page navigation">
+										<div class="pagination justify-content-center">
+											<a class="page-item page-link" href="{page:index}">首页</a>
+											<a class="page-item page-link" href="{page:pre}">上一页</a>
+											<a class="page-item page-link active" href="">1</a>
+											<a class="page-item page-link" href="">2</a>
+											<a class="page-item page-link" href="{page:next}">下一页</a>
+											<a class="page-item page-link" href="{page:last}">尾页</a>
+										</div>
+									</nav>	
+									<!-- <div class="text-center my-5 text-secondary">未查询到任何数据！</div> -->
+								</div>
 							</div>
 							<!-- 右侧模块 下部列表 结束 -->
-
 						</div>
 						<!-- 右侧模块 结束 -->
+
+
 					</div>
 				</div>
 				<!-- 内容区域 结束 -->
 			</div>
 		</section>
-
 
 
 
