--- a/index.html
+++ b/index.html
@@ -223,16 +223,6 @@
 							<!-- 模块结束 -->
 							<!-- 模块开始 -->
 							<div class="accordionbox-item">
-								<!-- 折叠样式 开始 -->
-								<div class="puAway-box">
-									<img src="./img/about/choseus.png" alt="" />
-									<div class="layer"></div>
-									<div class="layer-box">
-										<i class="pe-7s-cz"></i>
-										<p>资产重组</p>
-									</div>
-								</div>
-								<!-- 折叠样式 结束 -->
 								<!-- 打开样式 开始 -->
 								<div class="curr-bgbox">
 									<div class="curr-imgbox">
@@ -243,6 +233,18 @@
 									<p>旧城拆迁、抵押贷款评估抵押贷款评估</p>
 								</div>
 								<!-- 打开样式 结束 -->
+								
+								<!-- 折叠样式 开始 -->
+								<div class="puAway-box">
+									<img src="./img/about/choseus.png" alt="" />
+									<div class="layer"></div>
+									<div class="layer-box">
+										<i class="pe-7s-cz"></i>
+										<p>资产重组</p>
+									</div>
+								</div>
+								<!-- 折叠样式 结束 -->
+
 							</div>
 							<!-- 模块结束 -->
 						</div>
@@ -668,16 +670,29 @@
 
 		<!-- 在线咨询 开始-->
 		<div class="service-box">
-			<div class="service-l" id="service-l">
+			<!-- <div class="service-item service-l" id="service-l">
 				<img src="./img/favicon.png" alt="" />
 				<span>您有新的消息</span>
-			</div>
-			<div class="service-r" id="service-r">
+			</div> -->
+			<div class="service-item service-r" id="service-r">
 				<img src="./img/favicon.png" alt="" />
 				<span>在线咨询</span>
 			</div>
 			<!-- 聊天框 -->
-			<div class="chatBox">1</div>
+			<div class="chatBox">
+				<div class="chatBox-title">
+					<img src="./img/favicon.png" alt="" />
+					<div class="telBox">
+						<p class="telp-1">请扫码添加微信</p>
+						<p class="telp-2">电话：13460844645</p>
+					</div>
+					<span class="closure-box" id="closure-box">X</span>
+				</div>
+				<div class="QR-code-box">
+					<img src="./img/icon-ewm.png" alt="" />
+				</div>
+				<div class="telBox-1">咨询电话：13460844645</div>
+			</div>
 		</div>
 		<!-- 在线咨询 结束-->
 
