--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		<link rel="stylesheet" type="text/css" href="css/fontawesome.all.min.css">
 		<link rel="stylesheet" type="text/css" href="css/pe-icon-7-stroke.css">
 		<link rel="stylesheet" type="text/css" href="css/helper.css">
+		<link rel="stylesheet" type="text/css" href="css/iconfont.css">
 
 		<!-- 动画 -->
 		<link rel="stylesheet" type="text/css" href="css/animate.css">
@@ -148,20 +149,21 @@
 					</div>
 					<div class="col-lg-9 col-md-10 our-serve-r-box">
 						<div class="ourServe-r-accordionbox">
-							<!-- 模块开始 -->
+							<!-- 模块开始-1 -->
 							<div class="accordionbox-item">
 								<!-- 折叠样式 开始 -->
 								<div class="puAway-box">
-									<img src="./img/about/aboutUs.jpg" alt="" />
-									<div class="layer"></div>
+									<img src="./img/index-bg-kj.png" alt="" class="puAway-bg-box"/>
+									<img src="./img/index-icon-x.png" alt="" class="puAway-x-box"/>
 									<div class="layer-box">
-										<i class="pe-7s-jsj"></i>
+										<i><img src="./img/index-icon-kj.png" alt=""></i>
 										<p>会计审计</p>
 									</div>
 								</div>
 								<!-- 折叠样式 结束 -->
 								<!-- 打开样式 开始 -->
 								<div class="curr-bgbox">
+									<img src="./img/index-icon-right.png" alt="" class="icon-right-box" />
 									<div class="curr-imgbox">
 										<img src="./img/about/choseus.png" alt="">
 									</div>
@@ -172,21 +174,22 @@
 								<!-- 打开样式 结束 -->
 
 							</div>
-							<!-- 模块结束 -->
-							<!-- 模块开始 -->
+							<!-- 模块结束-1 -->
+							<!-- 模块开始-2 -->
 							<div class="accordionbox-item">
 								<!-- 折叠样式 开始 -->
 								<div class="puAway-box">
-									<img src="./img/about/choseus.png" alt="" />
-									<div class="layer"></div>
+									<img src="./img/index-bg-sw.png" alt="" class="puAway-bg-box"/>
+									<img src="./img/index-icon-x.png" alt="" class="puAway-x-box"/>
 									<div class="layer-box">
-										<i class="pe-7s-zx"></i>
+										<i><img src="./img/index-icon-sw.png" alt=""></i>
 										<p>税务咨询</p>
 									</div>
 								</div>
 								<!-- 折叠样式 结束 -->
 								<!-- 打开样式 开始 -->
 								<div class="curr-bgbox">
+									<img src="./img/index-icon-right.png" alt="" class="icon-right-box" />
 									<div class="curr-imgbox">
 										<img src="./img/about/choseus.png" alt="">
 									</div>
@@ -196,21 +199,22 @@
 								</div>
 								<!-- 打开样式 结束 -->
 							</div>
-							<!-- 模块结束 -->
-							<!-- 模块开始 -->
+							<!-- 模块结束-2 -->
+							<!-- 模块开始-3 -->
 							<div class="accordionbox-item">
 								<!-- 折叠样式 开始 -->
 								<div class="puAway-box">
-									<img src="./img/about/choseus.png" alt="" />
-									<div class="layer"></div>
+									<img src="./img/index-bg-zc.png" alt="" class="puAway-bg-box"/>
+									<img src="./img/index-icon-x.png" alt="" class="puAway-x-box"/>
 									<div class="layer-box">
-										<i class="pe-7s-pg"></i>
+										<i><img src="./img/index-icon-zc.png" alt=""></i>
 										<p>资产评估</p>
 									</div>
 								</div>
 								<!-- 折叠样式 结束 -->
 								<!-- 打开样式 开始 -->
 								<div class="curr-bgbox">
+									<img src="./img/index-icon-right.png" alt="" class="icon-right-box" />
 									<div class="curr-imgbox">
 										<img src="./img/about/choseus.png" alt="">
 									</div>
@@ -220,11 +224,12 @@
 								</div>
 								<!-- 打开样式 结束 -->
 							</div>
-							<!-- 模块结束 -->
-							<!-- 模块开始 -->
+							<!-- 模块结束-3 -->
+							<!-- 模块开始-4 -->
 							<div class="accordionbox-item">
 								<!-- 打开样式 开始 -->
 								<div class="curr-bgbox">
+									<img src="./img/index-icon-right.png" alt="" class="icon-right-box" />
 									<div class="curr-imgbox">
 										<img src="./img/about/choseus.png" alt="">
 									</div>
@@ -236,17 +241,17 @@
 								
 								<!-- 折叠样式 开始 -->
 								<div class="puAway-box">
-									<img src="./img/about/choseus.png" alt="" />
-									<div class="layer"></div>
+									<img src="./img/index-bg-zj.png" alt="" class="puAway-bg-box"/>
+									<img src="./img/index-icon-x.png" alt="" class="puAway-x-box"/>
 									<div class="layer-box">
-										<i class="pe-7s-cz"></i>
+										<i><img src="./img/index-icon-zj.png" alt=""></i>
 										<p>资产重组</p>
 									</div>
 								</div>
 								<!-- 折叠样式 结束 -->
 
 							</div>
-							<!-- 模块结束 -->
+							<!-- 模块结束-4 -->
 						</div>
 					</div>
 				</div>
@@ -471,6 +476,7 @@
 			</div>
 		</section>
 		<!-- 新闻动态结束 -->
+		<div class="index-bg-t"></div>
 		<!-- 我们的团队 开始 -->
 		<section id="ourTeam" class="ourTeam">
 			<div class="container-fluid">
@@ -669,14 +675,19 @@
 		<!--  footer 结束 -->
 
 		<!-- 在线咨询 开始-->
-		<div class="service-box">
-			<!-- <div class="service-item service-l" id="service-l">
-				<img src="./img/favicon.png" alt="" />
-				<span>您有新的消息</span>
+			<div class="service-box">
+			<!-- <div class="service-item service-l">
+				<div id="service-l">
+					<img src="./img/favicon.png" alt="" />
+					<span>您有新消息</span>
+				</div>
 			</div> -->
-			<div class="service-item service-r" id="service-r">
-				<img src="./img/favicon.png" alt="" />
-				<span>在线咨询</span>
+			<div class="service-item service-r">
+				<div id="service-r">
+					<img src="./img/favicon.png" alt="" />
+					<span>在线咨询</span>
+				</div>
+				<a href="#top" id="totop"><i class="iconfont icon-fanhuidingbu4"></i></a>
 			</div>
 			<!-- 聊天框 -->
 			<div class="chatBox">
