--- a/joinUs-company.html
+++ b/joinUs-company.html
@@ -230,7 +230,18 @@
                           </select>
                         </div>
                       </div>
-                  </div>
+									</div>
+									<div class="row">
+										<div class="from-group group-box">
+											<label for="code">验证码：</label>
+											<div class="companyinput-box">
+												<input type="text" name="code" id="" />
+											</div>
+										</div>
+										<div class="codeImg-box">
+											<img src="./img/news/icon-zwf.png" alt="">
+										</div>
+									</div>
                   <div class="contact-frm-btn">
                     <button type="submit" class="mr_btn_1">提交申请</button>
                     <button class="mr_btn_2">400-995-2686</button>
