--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 									<div class="curr-imgbox">
 										<img src="./img/about/choseus.png" alt="">
 									</div>
-									<i class="pe-7s-jsj"></i>
+									<i><img src="./img/index-icon-kj.png" alt=""></i>
 									<p>资产重组、企业收购</p>
 									<p>旧城拆迁、抵押贷款评估抵押贷款评估</p>
 								</div>
@@ -193,7 +193,7 @@
 									<div class="curr-imgbox">
 										<img src="./img/about/choseus.png" alt="">
 									</div>
-									<i class="pe-7s-zx"></i>
+									<i><img src="./img/index-icon-sw.png" alt=""></i>
 									<p>资产重组、企业收购</p>
 									<p>旧城拆迁、抵押贷款评估抵押贷款评估</p>
 								</div>
@@ -218,7 +218,7 @@
 									<div class="curr-imgbox">
 										<img src="./img/about/choseus.png" alt="">
 									</div>
-									<i class="pe-7s-pg"></i>
+									<i><img src="./img/index-icon-zc.png" alt=""></i>
 									<p>资产重组、企业收购</p>
 									<p>旧城拆迁、抵押贷款评估抵押贷款评估</p>
 								</div>
@@ -233,7 +233,7 @@
 									<div class="curr-imgbox">
 										<img src="./img/about/choseus.png" alt="">
 									</div>
-									<i class="pe-7s-cz"></i>
+									<i><img src="./img/index-icon-zj.png" alt=""></i>
 									<p>资产重组、企业收购</p>
 									<p>旧城拆迁、抵押贷款评估抵押贷款评估</p>
 								</div>
@@ -306,15 +306,72 @@
 		<section id="customer" class="customer">
 			<div class="container-fluid">
 				<div class="row justify-content-center">
-					<div class="col-lg-12 col-md-12">
-						<div class="section-title-box">
-							<div>
-								<div class="section-l-title">我们的客户</div>
-								<p class="section-l-eltitle">Customer</p>
-							</div>
+					<div class="section-title-box">
+						<div>
+							<div class="section-l-title">我们的客户</div>
+							<p class="section-l-eltitle">Customer</p>
 						</div>
-						<div class="customer-bg-box">
-							<img src="./img/customer-bg1.png" alt="">
+					</div>
+					<div class="customer-bg-box">
+						<div>
+							<img src="./img/customer/customer-1.png" alt="" class="customer-bgimg"/>
+						</div>
+						<div>
+							<img src="./img/customer/customer-2.png" alt="" class="customer-bgimg"/>
+						</div>
+						<div>
+							<img src="./img/customer/customer-3.png" alt="" class="customer-bgimg"/>
+						</div>
+						<div>
+							<img src="./img/customer/customer-4.png" alt="" class="customer-bgimg"/>
+						</div>
+						<div>
+							<img src="./img/customer/customer-5.png" alt="" class="customer-bgimg"/>
+						</div>
+						<div>
+							<img src="./img/customer/customer-6.png" alt="" class="customer-bgimg"/>
+						</div>
+						<div>
+							<img src="./img/customer/customer-7.png" alt="" class="customer-bgimg"/>
+						</div>
+						<div>
+							<img src="./img/customer/customer-8.png" alt="" class="customer-bgimg"/>
+						</div>
+						<div>
+							<img src="./img/customer/customer-9.png" alt="" class="customer-bgimg"/>
+						</div>
+						<div>
+							<img src="./img/customer/customer-10.png" alt="" class="customer-bgimg"/>
+						</div>
+						<div>
+							<img src="./img/customer/customer-11.png" alt="" class="customer-bgimg"/>
+						</div>
+						<div>
+							<img src="./img/customer/customer-12.png" alt="" class="customer-bgimg"/>
+						</div>
+						<div>
+							<img src="./img/customer/customer-13.png" alt="" class="customer-bgimg"/>
+						</div>
+						<div>
+							<img src="./img/customer/customer-14.png" alt="" class="customer-bgimg"/>
+						</div>
+						<div>
+							<img src="./img/customer/customer-15.png" alt="" class="customer-bgimg"/>
+						</div>
+						<div>
+							<img src="./img/customer/customer-16.png" alt="" class="customer-bgimg"/>
+						</div>
+						<div>
+							<img src="./img/customer/customer-17.png" alt="" class="customer-bgimg"/>
+						</div>
+						<div>
+							<img src="./img/customer/customer-18.png" alt="" class="customer-bgimg"/>
+						</div>
+						<div>
+							<img src="./img/customer/customer-19.png" alt="" class="customer-bgimg"/>
+						</div>
+						<div>
+							<img src="./img/customer/customer-20.png" alt="" class="customer-bgimg"/>
 						</div>
 					</div>
 				</div>
