--- a/aboutUs.html
+++ b/aboutUs.html
@@ -210,10 +210,26 @@
 										</div>
 									</div>
 									<div class="culture-bgbox">
-										<img src="./img/about/cultureBg-1.png" alt="" />
-										<img src="./img/about/cultureBg-2.png" alt="" />
-										<img src="./img/about/cultureBg-3.png" alt="" />
-										<img src="./img/about/cultureBg-4.png" alt="" />
+										<div>
+											<img src="./img/about/culture-p-01.png" alt="" class="culture-p"/>
+											<img src="./img/about/culture-p-01-1.png" alt="" class="culture-p culture-p-1"/>
+											<img src="./img/about/cultureBg-1.png" alt="" class="cultureBg-img"/>
+										</div>
+										<div>
+											<img src="./img/about/culture-p-02.png" alt="" class="culture-p"/>
+											<img src="./img/about/culture-p-02-1.png" alt="" class="culture-p culture-p-1"/>
+											<img src="./img/about/cultureBg-2.png" alt="" class="cultureBg-img"/>
+										</div>
+										<div>
+											<img src="./img/about/culture-p-03.png" alt="" class="culture-p"/>
+											<img src="./img/about/culture-p-03-1.png" alt="" class="culture-p culture-p-1"/>
+											<img src="./img/about/cultureBg-3.png" alt="" class="cultureBg-img"/>
+										</div>
+										<div>
+											<img src="./img/about/culture-p-04.png" alt="" class="culture-p"/>
+											<img src="./img/about/culture-p-04-1.png" alt="" class="culture-p culture-p-1"/>
+											<img src="./img/about/cultureBg-4.png" alt="" class="cultureBg-img"/>
+										</div>
 									</div>
 								</div>
 
