轮播左右、服务领域、新闻列表

--- a/news.html
+++ b/news.html
@@ -153,13 +153,15 @@
                   </div>
                   <div class="news-itemslist">
                     <a href="newsDetails.html">
-                      <img src="./img/news/icon-zwf.png" alt="" class="items-img"/>
+                      <div class="items-img-box">
+												<img src="./img/news/icon-jx.png" alt="" class="items-img"/>
+											</div>
                       <div class="items-info-box">
                         <p class="items-info-title">5月1日起免增值税！</p>
                         <p class="items-info-text">新华社北京4月27日电 国务院总理李克强4月27日主持召开国务院常务会议，决定加大稳岗促就业政策力度，保持就业稳定和经济平稳运行…</p>
                         <p class="items-info-f">
                           <span>来源：</span>
-                          <img src="./img/news/icon-wt.png" />
+                          <img src="./img/news-img1.png" />
                           <span style="color: #333333;">新华社</span>
                           <span class="items-info-s">时间：2022-06-17</span>
                         </p>
@@ -168,7 +170,9 @@
                   </div>
                   <div class="news-itemslist">
                     <a href="newsDetails.html">
-                      <img src="./img/news/icon-zwf.png" alt="" class="items-img"/>
+                      <div class="items-img-box">
+												<img src="./img/news-img1.png" alt="" class="items-img"/>
+											</div>
                       <div class="items-info-box">
                         <p class="items-info-title">5月1日起免增值税！</p>
                         <p class="items-info-text">新华社北京4月27日电 国务院总理李克强4月27日主持召开国务院常务会议，决定加大稳岗促就业政策力度，保持就业稳定和经济平稳运行…</p>
