--- a/services.html
+++ b/services.html
@@ -143,10 +143,10 @@
 							<div class="service-bg-box">
 								 <!-- 01 开始、 -->
 								<div class="service-imgbox">
-									<div class="service-imgbox-l ">
+									<div class="service-imgbox-l imgbox-one">
 										<img src="./img/service/service1-left.png" alt="">
 									</div>
-									<div class="service-imgbox-r">
+									<div class="service-imgbox-r imgbox-two">
 											<img src="./img/service/service1-right-1.png" alt="" class="serviceImg">
 											<img src="./img/service/service1-right-2.png" alt="" class="serviceImg serviceImg-hover">
 									</div>
@@ -155,21 +155,21 @@
 
 								<!-- 02 开始、 -->
 								<div class="service-imgbox">
-									<div class="service-imgbox-l">
+									<div class="service-imgbox-l imgbox-two">
 										<img src="./img/service/service2-left-1.png" alt="" class="serviceImg">
 										<img src="./img/service/service2-left-2.png" alt="" class="serviceImg serviceImg-hover">
 									</div>
-									<div class="service-imgbox-r">
+									<div class="service-imgbox-r imgbox-one">
 											<img src="./img/service/service2-right.png" alt="">
 									</div>
 								</div>
 								<!-- 02 结束、 -->
 								<!-- 03 开始、 -->
 								<div class="service-imgbox">
-										<div class="service-imgbox-l">
+										<div class="service-imgbox-l imgbox-one">
 											<img src="./img/service/service3-left.png" alt="">
 										</div>
-										<div class="service-imgbox-r">
+										<div class="service-imgbox-r imgbox-two">
 												<img src="./img/service/service3-right-1.png" alt="" class="serviceImg">
 												<img src="./img/service/service3-right-2.png" alt="" class="serviceImg serviceImg-hover">
 										</div>
@@ -177,11 +177,11 @@
 									<!-- 03 结束、 -->
 								<!-- 04 开始、 -->
 								<div class="service-imgbox">
-										<div class="service-imgbox-l">
+										<div class="service-imgbox-l imgbox-two">
 											<img src="./img/service/service4-left-1.png" alt="" class="serviceImg">
 											<img src="./img/service/service4-left-2.png" alt="" class="serviceImg serviceImg-hover">
 										</div>
-										<div class="service-imgbox-r">
+										<div class="service-imgbox-r imgbox-one">
 											<img src="./img/service/service4-right.png" alt="">
 										</div>
 									</div>
