--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 				<!--Item 1 结束 -->
 
 				<!--Item 2 -->
-				<div class="slide-item" style="background-image: url(img/banner.png)">
+				<div class="slide-item" style="background-image: url(img/bg-1.png)">
 					<!-- <div class="overlay"></div> -->
 				</div>
 				<!--Item 2 结束 -->
