--- a/index.html
+++ b/index.html
@@ -623,8 +623,7 @@
 							</div>
 							<div class="ourTeam-title-box">
 								<p>华文财税董事长</p>
-								<p>中国注册会计师</p>
-								<p>资产评估师</p>
+								<p>中国注册会计师,资产评估师</p>
 								<p>第十二届邯郸市政协常委</p>
 								<p>邯郸市工商业联合会总商会副会长</p>
 							</div>
