--- a/aboutUs.html
+++ b/aboutUs.html
@@ -278,7 +278,9 @@
 								<div class="team-block-box">
 
 									<div class="team-block-items1">
-										<img src="./img/about/team/team-1.png" alt="" />
+										<div class="items1-img">
+											<img src="./img/about/team/team-1.png" alt="" />
+										</div>
 										<div class="team-items1-info">
 											<div class="info-1">董事长简介</div>
 											<div class="layer-1"></div>
